<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_orange_light"
    android:orientation="vertical"
    android:visibility="gone">

    <!--TODO use constraint layout for a better performance-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/availabilityStatusTVUnfolded"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@android:color/white"
            tools:text="Available" />

        <ImageView
            android:id="@+id/commonInterestsImageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="right|center"
            android:layout_marginRight="16dp"
            android:src="@drawable/more_info_white" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#538053">

        <LinearLayout
            android:id="@+id/headerLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:id="@+id/roundedTextViewUnfolded"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_textview"
                android:gravity="center"
                android:text="S" />

            <TextView
                android:id="@+id/userNameTextViewUnfolded"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/roundedTextViewUnfolded"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                tools:text="Srijith Reddy Pingili " />

            <TextView
                android:id="@+id/userRoleTextViewUnfolded"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_toRightOf="@id/headerLinearLayout"
                android:gravity="center"
                tools:text="Associate Senior Software Engineer" />

        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aboutUserLabelTextView"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/aboutUserDescriptionTextView"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lines="4"
                android:textColor="@android:color/black"
                tools:text="Working on Mobile apps Working on Mobile apps Working on Mobile apps  Working on Mobile apps Working on Mobile apps Working on Mobile apps Working on Mobile apps Working on Mobile apps" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:src="#e0e0e0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/organizationLabel"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organization" />

                <TextView
                    android:id="@+id/organizationNameTextViewUnfolded"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/organizationLabel"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/black"
                    tools:text="Microsoft" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/locationLabel"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location" />

                <TextView
                    android:id="@+id/locationTextViewUnfolded"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/locationLabel"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="16dp"
                    android:text="USA"
                    android:textColor="@android:color/black" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/availabilityLabel"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/availability" />

                <TextView
                    android:id="@+id/availabilityTextViewUnfolded"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/availabilityLabel"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="32dp"
                    android:textColor="@android:color/black"
                    tools:text="5" />
            </RelativeLayout>

        </LinearLayout>

        <!-- request button -->
        <TextView
            android:id="@+id/requestUserButton"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/colorAccent"
            android:padding="8dp"
            android:text="@string/request"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/availableSpotsTextView"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            tools:text="4 spots left" />

    </LinearLayout>
</LinearLayout>